--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
+ul {
+  list-style: none;
+  width: 400px;
+}
+
+.wrapper {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 50px auto 0;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form {
+  width: 400px;
+}
+
+.form__input {
+  display: flex;
+  width: 100%;
+  border-bottom: 1px dashed gray;
+  padding-bottom: 10px;
+  height: 67px;
+}
+
+.form__edit-input {
+  outline: none;
+  border: none;
+  font-size: 20px;
+  width: 90%;
+}
+
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
